Practica02_/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    ADDF
    ADDR
    AND
    AND_G
    ARROBA
    BASE
    CLEAR
    COMF
    COMMENT_ML
    COMP
    COMPR
    C_TEXT
    DIRECTIV
    DIV
    DIVF
    DIVIDE
    DIVR
    EQUALS
    FACTORIAL
    FINL
    FIX
    FLOAT
    FLOAT_NUM
    HIO
    J
    JEQ
    JGT
    JLT
    JSUB
    LDA
    LDB
    LDCH
    LDF
    LDL
    LDS
    LDT
    LDX
    LESSEQ
    LESST
    LPARENT
    LPS
    MINUS
    MOD
    MODIF
    MOREEQ
    MORET
    MUL
    MULF
    MULR
    MULTIPLY
    NORM
    OPERANDO
    OR
    OR_G
    RD
    RMO
    RPARENT
    RSUB
    SHIFTL
    SHIFTR
    SSK
    STA
    STB
    STCH
    STF
    STI
    STL
    STS
    STSW
    STT
    STX
    SUB
    SUBF
    SUBR
    SVC
    TD
    TIX
    TIXR
    UMINUS
    WD
    X_HEX

Grammar

Rule 0     S' -> sicxe_file
Rule 1     sicxe_file -> empty
Rule 2     sicxe_file -> programa
Rule 3     sicxe_file -> empty programa
Rule 4     sicxe_file -> empty programa empty
Rule 5     programa -> inicio proposiciones fin
Rule 6     inicio -> etiqueta START numero COMMENT_IL NEWLINE
Rule 7     inicio -> etiqueta START numero NEWLINE
Rule 8     numero -> INT
Rule 9     numero -> HEX_INT
Rule 10    fin -> END entrada
Rule 11    entrada -> NAME
Rule 12    proposiciones -> proposiciones proposicion
Rule 13    proposiciones -> proposicion
Rule 14    proposicion -> directiva COMMENT_IL NEWLINE
Rule 15    proposicion -> instruccion COMMENT_IL NEWLINE
Rule 16    proposicion -> directiva NEWLINE
Rule 17    proposicion -> instruccion NEWLINE
Rule 18    instruccion -> etiqueta opformato
Rule 19    instruccion -> opformato
Rule 20    directiva -> etiqueta tipodirectiva opdirectiva
Rule 21    opdirectiva -> NUM
Rule 22    opdirectiva -> NAME
Rule 23    tipodirectiva -> BYTE
Rule 24    tipodirectiva -> WORD
Rule 25    tipodirectiva -> RESB
Rule 26    tipodirectiva -> RESW
Rule 27    etiqueta -> NAME
Rule 28    opformato -> f4
Rule 29    opformato -> f3
Rule 30    opformato -> f2
Rule 31    opformato -> f1
Rule 32    f3 -> simple3
Rule 33    f3 -> indirecto3
Rule 34    f3 -> inmediato3
Rule 35    f3 -> SIO
Rule 36    f3 -> TIO
Rule 37    f3 -> simple3 COMA X
Rule 38    f3 -> indirecto3 COMA X
Rule 39    f3 -> inmediato3 COMA X
Rule 40    f4 -> PLUS f3
Rule 41    simple3 -> CODOP NAME
Rule 42    simple3 -> CODOP NUM
Rule 43    indirecto3 -> CODOP @ NUM
Rule 44    indirecto3 -> CODOP @ NAME
Rule 45    inmediato3 -> CODOP # NUM
Rule 46    inmediato3 -> CODOP # NAME
Rule 47    f2 -> CODOP NUM
Rule 48    f2 -> CODOP REG
Rule 49    f2 -> CODOP REG COMA REG
Rule 50    f2 -> CODOP REG COMA NUM
Rule 51    f1 -> CODOP NEWLINE
Rule 52    empty -> NEWLINE
Rule 53    empty -> <empty>

Terminals, with rules where they appear

#                    : 45 46
@                    : 43 44
ADD                  : 
ADDF                 : 
ADDR                 : 
AND                  : 
AND_G                : 
ARROBA               : 
BASE                 : 
BYTE                 : 23
CLEAR                : 
CODOP                : 41 42 43 44 45 46 47 48 49 50 51
COMA                 : 37 38 39 49 50
COMF                 : 
COMMENT_IL           : 6 14 15
COMMENT_ML           : 
COMP                 : 
COMPR                : 
C_TEXT               : 
DIRECTIV             : 
DIV                  : 
DIVF                 : 
DIVIDE               : 
DIVR                 : 
END                  : 10
EQUALS               : 
FACTORIAL            : 
FINL                 : 
FIX                  : 
FLOAT                : 
FLOAT_NUM            : 
HEX_INT              : 9
HIO                  : 
INT                  : 8
J                    : 
JEQ                  : 
JGT                  : 
JLT                  : 
JSUB                 : 
LDA                  : 
LDB                  : 
LDCH                 : 
LDF                  : 
LDL                  : 
LDS                  : 
LDT                  : 
LDX                  : 
LESSEQ               : 
LESST                : 
LPARENT              : 
LPS                  : 
MINUS                : 
MOD                  : 
MODIF                : 
MOREEQ               : 
MORET                : 
MUL                  : 
MULF                 : 
MULR                 : 
MULTIPLY             : 
NAME                 : 11 22 27 41 44 46
NEWLINE              : 6 7 14 15 16 17 51 52
NORM                 : 
NUM                  : 21 42 43 45 47 50
OPERANDO             : 
OR                   : 
OR_G                 : 
PLUS                 : 40
RD                   : 
REG                  : 48 49 49 50
RESB                 : 25
RESW                 : 26
RMO                  : 
RPARENT              : 
RSUB                 : 
SHIFTL               : 
SHIFTR               : 
SIO                  : 35
SSK                  : 
STA                  : 
START                : 6 7
STB                  : 
STCH                 : 
STF                  : 
STI                  : 
STL                  : 
STS                  : 
STSW                 : 
STT                  : 
STX                  : 
SUB                  : 
SUBF                 : 
SUBR                 : 
SVC                  : 
TD                   : 
TIO                  : 36
TIX                  : 
TIXR                 : 
UMINUS               : 
WD                   : 
WORD                 : 24
X                    : 37 38 39
X_HEX                : 
error                : 

Nonterminals, with rules where they appear

directiva            : 14 16
empty                : 1 3 4 4
entrada              : 10
etiqueta             : 6 7 18 20
f1                   : 31
f2                   : 30
f3                   : 29 40
f4                   : 28
fin                  : 5
indirecto3           : 33 38
inicio               : 5
inmediato3           : 34 39
instruccion          : 15 17
numero               : 6 7
opdirectiva          : 20
opformato            : 18 19
programa             : 2 3 4
proposicion          : 12 13
proposiciones        : 5 12
sicxe_file           : 0
simple3              : 32 37
tipodirectiva        : 20

Parsing method: LALR

state 0

    (0) S' -> . sicxe_file
    (1) sicxe_file -> . empty
    (2) sicxe_file -> . programa
    (3) sicxe_file -> . empty programa
    (4) sicxe_file -> . empty programa empty
    (52) empty -> . NEWLINE
    (53) empty -> .
    (5) programa -> . inicio proposiciones fin
    (6) inicio -> . etiqueta START numero COMMENT_IL NEWLINE
    (7) inicio -> . etiqueta START numero NEWLINE
    (27) etiqueta -> . NAME

  ! shift/reduce conflict for NAME resolved as shift
    NEWLINE         shift and go to state 4
    $end            reduce using rule 53 (empty -> .)
    NAME            shift and go to state 7

  ! NAME            [ reduce using rule 53 (empty -> .) ]

    sicxe_file                     shift and go to state 1
    empty                          shift and go to state 2
    programa                       shift and go to state 3
    inicio                         shift and go to state 5
    etiqueta                       shift and go to state 6

state 1

    (0) S' -> sicxe_file .



state 2

    (1) sicxe_file -> empty .
    (3) sicxe_file -> empty . programa
    (4) sicxe_file -> empty . programa empty
    (5) programa -> . inicio proposiciones fin
    (6) inicio -> . etiqueta START numero COMMENT_IL NEWLINE
    (7) inicio -> . etiqueta START numero NEWLINE
    (27) etiqueta -> . NAME

    $end            reduce using rule 1 (sicxe_file -> empty .)
    NAME            shift and go to state 7

    programa                       shift and go to state 8
    inicio                         shift and go to state 5
    etiqueta                       shift and go to state 6

state 3

    (2) sicxe_file -> programa .

    $end            reduce using rule 2 (sicxe_file -> programa .)


state 4

    (52) empty -> NEWLINE .

    NAME            reduce using rule 52 (empty -> NEWLINE .)
    $end            reduce using rule 52 (empty -> NEWLINE .)


state 5

    (5) programa -> inicio . proposiciones fin
    (12) proposiciones -> . proposiciones proposicion
    (13) proposiciones -> . proposicion
    (14) proposicion -> . directiva COMMENT_IL NEWLINE
    (15) proposicion -> . instruccion COMMENT_IL NEWLINE
    (16) proposicion -> . directiva NEWLINE
    (17) proposicion -> . instruccion NEWLINE
    (20) directiva -> . etiqueta tipodirectiva opdirectiva
    (18) instruccion -> . etiqueta opformato
    (19) instruccion -> . opformato
    (27) etiqueta -> . NAME
    (28) opformato -> . f4
    (29) opformato -> . f3
    (30) opformato -> . f2
    (31) opformato -> . f1
    (40) f4 -> . PLUS f3
    (32) f3 -> . simple3
    (33) f3 -> . indirecto3
    (34) f3 -> . inmediato3
    (35) f3 -> . SIO
    (36) f3 -> . TIO
    (37) f3 -> . simple3 COMA X
    (38) f3 -> . indirecto3 COMA X
    (39) f3 -> . inmediato3 COMA X
    (47) f2 -> . CODOP NUM
    (48) f2 -> . CODOP REG
    (49) f2 -> . CODOP REG COMA REG
    (50) f2 -> . CODOP REG COMA NUM
    (51) f1 -> . CODOP NEWLINE
    (41) simple3 -> . CODOP NAME
    (42) simple3 -> . CODOP NUM
    (43) indirecto3 -> . CODOP @ NUM
    (44) indirecto3 -> . CODOP @ NAME
    (45) inmediato3 -> . CODOP # NUM
    (46) inmediato3 -> . CODOP # NAME

    NAME            shift and go to state 7
    PLUS            shift and go to state 19
    SIO             shift and go to state 23
    TIO             shift and go to state 24
    CODOP           shift and go to state 25

    proposiciones                  shift and go to state 9
    proposicion                    shift and go to state 10
    directiva                      shift and go to state 11
    instruccion                    shift and go to state 12
    etiqueta                       shift and go to state 13
    opformato                      shift and go to state 14
    f4                             shift and go to state 15
    f3                             shift and go to state 16
    f2                             shift and go to state 17
    f1                             shift and go to state 18
    simple3                        shift and go to state 20
    indirecto3                     shift and go to state 21
    inmediato3                     shift and go to state 22

state 6

    (6) inicio -> etiqueta . START numero COMMENT_IL NEWLINE
    (7) inicio -> etiqueta . START numero NEWLINE

    START           shift and go to state 26


state 7

    (27) etiqueta -> NAME .

    START           reduce using rule 27 (etiqueta -> NAME .)
    BYTE            reduce using rule 27 (etiqueta -> NAME .)
    WORD            reduce using rule 27 (etiqueta -> NAME .)
    RESB            reduce using rule 27 (etiqueta -> NAME .)
    RESW            reduce using rule 27 (etiqueta -> NAME .)
    PLUS            reduce using rule 27 (etiqueta -> NAME .)
    SIO             reduce using rule 27 (etiqueta -> NAME .)
    TIO             reduce using rule 27 (etiqueta -> NAME .)
    CODOP           reduce using rule 27 (etiqueta -> NAME .)


state 8

    (3) sicxe_file -> empty programa .
    (4) sicxe_file -> empty programa . empty
    (52) empty -> . NEWLINE
    (53) empty -> .

  ! reduce/reduce conflict for $end resolved using rule 3 (sicxe_file -> empty programa .)
    $end            reduce using rule 3 (sicxe_file -> empty programa .)
    NEWLINE         shift and go to state 4

  ! $end            [ reduce using rule 53 (empty -> .) ]

    empty                          shift and go to state 27

state 9

    (5) programa -> inicio proposiciones . fin
    (12) proposiciones -> proposiciones . proposicion
    (10) fin -> . END entrada
    (14) proposicion -> . directiva COMMENT_IL NEWLINE
    (15) proposicion -> . instruccion COMMENT_IL NEWLINE
    (16) proposicion -> . directiva NEWLINE
    (17) proposicion -> . instruccion NEWLINE
    (20) directiva -> . etiqueta tipodirectiva opdirectiva
    (18) instruccion -> . etiqueta opformato
    (19) instruccion -> . opformato
    (27) etiqueta -> . NAME
    (28) opformato -> . f4
    (29) opformato -> . f3
    (30) opformato -> . f2
    (31) opformato -> . f1
    (40) f4 -> . PLUS f3
    (32) f3 -> . simple3
    (33) f3 -> . indirecto3
    (34) f3 -> . inmediato3
    (35) f3 -> . SIO
    (36) f3 -> . TIO
    (37) f3 -> . simple3 COMA X
    (38) f3 -> . indirecto3 COMA X
    (39) f3 -> . inmediato3 COMA X
    (47) f2 -> . CODOP NUM
    (48) f2 -> . CODOP REG
    (49) f2 -> . CODOP REG COMA REG
    (50) f2 -> . CODOP REG COMA NUM
    (51) f1 -> . CODOP NEWLINE
    (41) simple3 -> . CODOP NAME
    (42) simple3 -> . CODOP NUM
    (43) indirecto3 -> . CODOP @ NUM
    (44) indirecto3 -> . CODOP @ NAME
    (45) inmediato3 -> . CODOP # NUM
    (46) inmediato3 -> . CODOP # NAME

    END             shift and go to state 30
    NAME            shift and go to state 7
    PLUS            shift and go to state 19
    SIO             shift and go to state 23
    TIO             shift and go to state 24
    CODOP           shift and go to state 25

    fin                            shift and go to state 28
    proposicion                    shift and go to state 29
    directiva                      shift and go to state 11
    instruccion                    shift and go to state 12
    etiqueta                       shift and go to state 13
    opformato                      shift and go to state 14
    f4                             shift and go to state 15
    f3                             shift and go to state 16
    f2                             shift and go to state 17
    f1                             shift and go to state 18
    simple3                        shift and go to state 20
    indirecto3                     shift and go to state 21
    inmediato3                     shift and go to state 22

state 10

    (13) proposiciones -> proposicion .

    END             reduce using rule 13 (proposiciones -> proposicion .)
    NAME            reduce using rule 13 (proposiciones -> proposicion .)
    PLUS            reduce using rule 13 (proposiciones -> proposicion .)
    SIO             reduce using rule 13 (proposiciones -> proposicion .)
    TIO             reduce using rule 13 (proposiciones -> proposicion .)
    CODOP           reduce using rule 13 (proposiciones -> proposicion .)


state 11

    (14) proposicion -> directiva . COMMENT_IL NEWLINE
    (16) proposicion -> directiva . NEWLINE

    COMMENT_IL      shift and go to state 31
    NEWLINE         shift and go to state 32


state 12

    (15) proposicion -> instruccion . COMMENT_IL NEWLINE
    (17) proposicion -> instruccion . NEWLINE

    COMMENT_IL      shift and go to state 33
    NEWLINE         shift and go to state 34


state 13

    (20) directiva -> etiqueta . tipodirectiva opdirectiva
    (18) instruccion -> etiqueta . opformato
    (23) tipodirectiva -> . BYTE
    (24) tipodirectiva -> . WORD
    (25) tipodirectiva -> . RESB
    (26) tipodirectiva -> . RESW
    (28) opformato -> . f4
    (29) opformato -> . f3
    (30) opformato -> . f2
    (31) opformato -> . f1
    (40) f4 -> . PLUS f3
    (32) f3 -> . simple3
    (33) f3 -> . indirecto3
    (34) f3 -> . inmediato3
    (35) f3 -> . SIO
    (36) f3 -> . TIO
    (37) f3 -> . simple3 COMA X
    (38) f3 -> . indirecto3 COMA X
    (39) f3 -> . inmediato3 COMA X
    (47) f2 -> . CODOP NUM
    (48) f2 -> . CODOP REG
    (49) f2 -> . CODOP REG COMA REG
    (50) f2 -> . CODOP REG COMA NUM
    (51) f1 -> . CODOP NEWLINE
    (41) simple3 -> . CODOP NAME
    (42) simple3 -> . CODOP NUM
    (43) indirecto3 -> . CODOP @ NUM
    (44) indirecto3 -> . CODOP @ NAME
    (45) inmediato3 -> . CODOP # NUM
    (46) inmediato3 -> . CODOP # NAME

    BYTE            shift and go to state 37
    WORD            shift and go to state 38
    RESB            shift and go to state 39
    RESW            shift and go to state 40
    PLUS            shift and go to state 19
    SIO             shift and go to state 23
    TIO             shift and go to state 24
    CODOP           shift and go to state 25

    tipodirectiva                  shift and go to state 35
    opformato                      shift and go to state 36
    f4                             shift and go to state 15
    f3                             shift and go to state 16
    f2                             shift and go to state 17
    f1                             shift and go to state 18
    simple3                        shift and go to state 20
    indirecto3                     shift and go to state 21
    inmediato3                     shift and go to state 22

state 14

    (19) instruccion -> opformato .

    COMMENT_IL      reduce using rule 19 (instruccion -> opformato .)
    NEWLINE         reduce using rule 19 (instruccion -> opformato .)


state 15

    (28) opformato -> f4 .

    COMMENT_IL      reduce using rule 28 (opformato -> f4 .)
    NEWLINE         reduce using rule 28 (opformato -> f4 .)


state 16

    (29) opformato -> f3 .

    COMMENT_IL      reduce using rule 29 (opformato -> f3 .)
    NEWLINE         reduce using rule 29 (opformato -> f3 .)


state 17

    (30) opformato -> f2 .

    COMMENT_IL      reduce using rule 30 (opformato -> f2 .)
    NEWLINE         reduce using rule 30 (opformato -> f2 .)


state 18

    (31) opformato -> f1 .

    COMMENT_IL      reduce using rule 31 (opformato -> f1 .)
    NEWLINE         reduce using rule 31 (opformato -> f1 .)


state 19

    (40) f4 -> PLUS . f3
    (32) f3 -> . simple3
    (33) f3 -> . indirecto3
    (34) f3 -> . inmediato3
    (35) f3 -> . SIO
    (36) f3 -> . TIO
    (37) f3 -> . simple3 COMA X
    (38) f3 -> . indirecto3 COMA X
    (39) f3 -> . inmediato3 COMA X
    (41) simple3 -> . CODOP NAME
    (42) simple3 -> . CODOP NUM
    (43) indirecto3 -> . CODOP @ NUM
    (44) indirecto3 -> . CODOP @ NAME
    (45) inmediato3 -> . CODOP # NUM
    (46) inmediato3 -> . CODOP # NAME

    SIO             shift and go to state 23
    TIO             shift and go to state 24
    CODOP           shift and go to state 42

    f3                             shift and go to state 41
    simple3                        shift and go to state 20
    indirecto3                     shift and go to state 21
    inmediato3                     shift and go to state 22

state 20

    (32) f3 -> simple3 .
    (37) f3 -> simple3 . COMA X

    COMMENT_IL      reduce using rule 32 (f3 -> simple3 .)
    NEWLINE         reduce using rule 32 (f3 -> simple3 .)
    COMA            shift and go to state 43


state 21

    (33) f3 -> indirecto3 .
    (38) f3 -> indirecto3 . COMA X

    COMMENT_IL      reduce using rule 33 (f3 -> indirecto3 .)
    NEWLINE         reduce using rule 33 (f3 -> indirecto3 .)
    COMA            shift and go to state 44


state 22

    (34) f3 -> inmediato3 .
    (39) f3 -> inmediato3 . COMA X

    COMMENT_IL      reduce using rule 34 (f3 -> inmediato3 .)
    NEWLINE         reduce using rule 34 (f3 -> inmediato3 .)
    COMA            shift and go to state 45


state 23

    (35) f3 -> SIO .

    COMMENT_IL      reduce using rule 35 (f3 -> SIO .)
    NEWLINE         reduce using rule 35 (f3 -> SIO .)


state 24

    (36) f3 -> TIO .

    COMMENT_IL      reduce using rule 36 (f3 -> TIO .)
    NEWLINE         reduce using rule 36 (f3 -> TIO .)


state 25

    (47) f2 -> CODOP . NUM
    (48) f2 -> CODOP . REG
    (49) f2 -> CODOP . REG COMA REG
    (50) f2 -> CODOP . REG COMA NUM
    (51) f1 -> CODOP . NEWLINE
    (41) simple3 -> CODOP . NAME
    (42) simple3 -> CODOP . NUM
    (43) indirecto3 -> CODOP . @ NUM
    (44) indirecto3 -> CODOP . @ NAME
    (45) inmediato3 -> CODOP . # NUM
    (46) inmediato3 -> CODOP . # NAME

    NUM             shift and go to state 46
    REG             shift and go to state 47
    NEWLINE         shift and go to state 48
    NAME            shift and go to state 49
    @               shift and go to state 50
    #               shift and go to state 51


state 26

    (6) inicio -> etiqueta START . numero COMMENT_IL NEWLINE
    (7) inicio -> etiqueta START . numero NEWLINE
    (8) numero -> . INT
    (9) numero -> . HEX_INT

    INT             shift and go to state 53
    HEX_INT         shift and go to state 54

    numero                         shift and go to state 52

state 27

    (4) sicxe_file -> empty programa empty .

    $end            reduce using rule 4 (sicxe_file -> empty programa empty .)


state 28

    (5) programa -> inicio proposiciones fin .

    $end            reduce using rule 5 (programa -> inicio proposiciones fin .)
    NEWLINE         reduce using rule 5 (programa -> inicio proposiciones fin .)


state 29

    (12) proposiciones -> proposiciones proposicion .

    END             reduce using rule 12 (proposiciones -> proposiciones proposicion .)
    NAME            reduce using rule 12 (proposiciones -> proposiciones proposicion .)
    PLUS            reduce using rule 12 (proposiciones -> proposiciones proposicion .)
    SIO             reduce using rule 12 (proposiciones -> proposiciones proposicion .)
    TIO             reduce using rule 12 (proposiciones -> proposiciones proposicion .)
    CODOP           reduce using rule 12 (proposiciones -> proposiciones proposicion .)


state 30

    (10) fin -> END . entrada
    (11) entrada -> . NAME

    NAME            shift and go to state 56

    entrada                        shift and go to state 55

state 31

    (14) proposicion -> directiva COMMENT_IL . NEWLINE

    NEWLINE         shift and go to state 57


state 32

    (16) proposicion -> directiva NEWLINE .

    END             reduce using rule 16 (proposicion -> directiva NEWLINE .)
    NAME            reduce using rule 16 (proposicion -> directiva NEWLINE .)
    PLUS            reduce using rule 16 (proposicion -> directiva NEWLINE .)
    SIO             reduce using rule 16 (proposicion -> directiva NEWLINE .)
    TIO             reduce using rule 16 (proposicion -> directiva NEWLINE .)
    CODOP           reduce using rule 16 (proposicion -> directiva NEWLINE .)


state 33

    (15) proposicion -> instruccion COMMENT_IL . NEWLINE

    NEWLINE         shift and go to state 58


state 34

    (17) proposicion -> instruccion NEWLINE .

    END             reduce using rule 17 (proposicion -> instruccion NEWLINE .)
    NAME            reduce using rule 17 (proposicion -> instruccion NEWLINE .)
    PLUS            reduce using rule 17 (proposicion -> instruccion NEWLINE .)
    SIO             reduce using rule 17 (proposicion -> instruccion NEWLINE .)
    TIO             reduce using rule 17 (proposicion -> instruccion NEWLINE .)
    CODOP           reduce using rule 17 (proposicion -> instruccion NEWLINE .)


state 35

    (20) directiva -> etiqueta tipodirectiva . opdirectiva
    (21) opdirectiva -> . NUM
    (22) opdirectiva -> . NAME

    NUM             shift and go to state 60
    NAME            shift and go to state 61

    opdirectiva                    shift and go to state 59

state 36

    (18) instruccion -> etiqueta opformato .

    COMMENT_IL      reduce using rule 18 (instruccion -> etiqueta opformato .)
    NEWLINE         reduce using rule 18 (instruccion -> etiqueta opformato .)


state 37

    (23) tipodirectiva -> BYTE .

    NUM             reduce using rule 23 (tipodirectiva -> BYTE .)
    NAME            reduce using rule 23 (tipodirectiva -> BYTE .)


state 38

    (24) tipodirectiva -> WORD .

    NUM             reduce using rule 24 (tipodirectiva -> WORD .)
    NAME            reduce using rule 24 (tipodirectiva -> WORD .)


state 39

    (25) tipodirectiva -> RESB .

    NUM             reduce using rule 25 (tipodirectiva -> RESB .)
    NAME            reduce using rule 25 (tipodirectiva -> RESB .)


state 40

    (26) tipodirectiva -> RESW .

    NUM             reduce using rule 26 (tipodirectiva -> RESW .)
    NAME            reduce using rule 26 (tipodirectiva -> RESW .)


state 41

    (40) f4 -> PLUS f3 .

    COMMENT_IL      reduce using rule 40 (f4 -> PLUS f3 .)
    NEWLINE         reduce using rule 40 (f4 -> PLUS f3 .)


state 42

    (41) simple3 -> CODOP . NAME
    (42) simple3 -> CODOP . NUM
    (43) indirecto3 -> CODOP . @ NUM
    (44) indirecto3 -> CODOP . @ NAME
    (45) inmediato3 -> CODOP . # NUM
    (46) inmediato3 -> CODOP . # NAME

    NAME            shift and go to state 49
    NUM             shift and go to state 62
    @               shift and go to state 50
    #               shift and go to state 51


state 43

    (37) f3 -> simple3 COMA . X

    X               shift and go to state 63


state 44

    (38) f3 -> indirecto3 COMA . X

    X               shift and go to state 64


state 45

    (39) f3 -> inmediato3 COMA . X

    X               shift and go to state 65


state 46

    (47) f2 -> CODOP NUM .
    (42) simple3 -> CODOP NUM .

  ! reduce/reduce conflict for COMMENT_IL resolved using rule 42 (simple3 -> CODOP NUM .)
  ! reduce/reduce conflict for NEWLINE resolved using rule 42 (simple3 -> CODOP NUM .)
    COMA            reduce using rule 42 (simple3 -> CODOP NUM .)
    COMMENT_IL      reduce using rule 42 (simple3 -> CODOP NUM .)
    NEWLINE         reduce using rule 42 (simple3 -> CODOP NUM .)

  ! COMMENT_IL      [ reduce using rule 47 (f2 -> CODOP NUM .) ]
  ! NEWLINE         [ reduce using rule 47 (f2 -> CODOP NUM .) ]


state 47

    (48) f2 -> CODOP REG .
    (49) f2 -> CODOP REG . COMA REG
    (50) f2 -> CODOP REG . COMA NUM

    COMMENT_IL      reduce using rule 48 (f2 -> CODOP REG .)
    NEWLINE         reduce using rule 48 (f2 -> CODOP REG .)
    COMA            shift and go to state 66


state 48

    (51) f1 -> CODOP NEWLINE .

    COMMENT_IL      reduce using rule 51 (f1 -> CODOP NEWLINE .)
    NEWLINE         reduce using rule 51 (f1 -> CODOP NEWLINE .)


state 49

    (41) simple3 -> CODOP NAME .

    COMA            reduce using rule 41 (simple3 -> CODOP NAME .)
    COMMENT_IL      reduce using rule 41 (simple3 -> CODOP NAME .)
    NEWLINE         reduce using rule 41 (simple3 -> CODOP NAME .)


state 50

    (43) indirecto3 -> CODOP @ . NUM
    (44) indirecto3 -> CODOP @ . NAME

    NUM             shift and go to state 67
    NAME            shift and go to state 68


state 51

    (45) inmediato3 -> CODOP # . NUM
    (46) inmediato3 -> CODOP # . NAME

    NUM             shift and go to state 69
    NAME            shift and go to state 70


state 52

    (6) inicio -> etiqueta START numero . COMMENT_IL NEWLINE
    (7) inicio -> etiqueta START numero . NEWLINE

    COMMENT_IL      shift and go to state 71
    NEWLINE         shift and go to state 72


state 53

    (8) numero -> INT .

    COMMENT_IL      reduce using rule 8 (numero -> INT .)
    NEWLINE         reduce using rule 8 (numero -> INT .)


state 54

    (9) numero -> HEX_INT .

    COMMENT_IL      reduce using rule 9 (numero -> HEX_INT .)
    NEWLINE         reduce using rule 9 (numero -> HEX_INT .)


state 55

    (10) fin -> END entrada .

    $end            reduce using rule 10 (fin -> END entrada .)
    NEWLINE         reduce using rule 10 (fin -> END entrada .)


state 56

    (11) entrada -> NAME .

    $end            reduce using rule 11 (entrada -> NAME .)
    NEWLINE         reduce using rule 11 (entrada -> NAME .)


state 57

    (14) proposicion -> directiva COMMENT_IL NEWLINE .

    END             reduce using rule 14 (proposicion -> directiva COMMENT_IL NEWLINE .)
    NAME            reduce using rule 14 (proposicion -> directiva COMMENT_IL NEWLINE .)
    PLUS            reduce using rule 14 (proposicion -> directiva COMMENT_IL NEWLINE .)
    SIO             reduce using rule 14 (proposicion -> directiva COMMENT_IL NEWLINE .)
    TIO             reduce using rule 14 (proposicion -> directiva COMMENT_IL NEWLINE .)
    CODOP           reduce using rule 14 (proposicion -> directiva COMMENT_IL NEWLINE .)


state 58

    (15) proposicion -> instruccion COMMENT_IL NEWLINE .

    END             reduce using rule 15 (proposicion -> instruccion COMMENT_IL NEWLINE .)
    NAME            reduce using rule 15 (proposicion -> instruccion COMMENT_IL NEWLINE .)
    PLUS            reduce using rule 15 (proposicion -> instruccion COMMENT_IL NEWLINE .)
    SIO             reduce using rule 15 (proposicion -> instruccion COMMENT_IL NEWLINE .)
    TIO             reduce using rule 15 (proposicion -> instruccion COMMENT_IL NEWLINE .)
    CODOP           reduce using rule 15 (proposicion -> instruccion COMMENT_IL NEWLINE .)


state 59

    (20) directiva -> etiqueta tipodirectiva opdirectiva .

    COMMENT_IL      reduce using rule 20 (directiva -> etiqueta tipodirectiva opdirectiva .)
    NEWLINE         reduce using rule 20 (directiva -> etiqueta tipodirectiva opdirectiva .)


state 60

    (21) opdirectiva -> NUM .

    COMMENT_IL      reduce using rule 21 (opdirectiva -> NUM .)
    NEWLINE         reduce using rule 21 (opdirectiva -> NUM .)


state 61

    (22) opdirectiva -> NAME .

    COMMENT_IL      reduce using rule 22 (opdirectiva -> NAME .)
    NEWLINE         reduce using rule 22 (opdirectiva -> NAME .)


state 62

    (42) simple3 -> CODOP NUM .

    COMA            reduce using rule 42 (simple3 -> CODOP NUM .)
    COMMENT_IL      reduce using rule 42 (simple3 -> CODOP NUM .)
    NEWLINE         reduce using rule 42 (simple3 -> CODOP NUM .)


state 63

    (37) f3 -> simple3 COMA X .

    COMMENT_IL      reduce using rule 37 (f3 -> simple3 COMA X .)
    NEWLINE         reduce using rule 37 (f3 -> simple3 COMA X .)


state 64

    (38) f3 -> indirecto3 COMA X .

    COMMENT_IL      reduce using rule 38 (f3 -> indirecto3 COMA X .)
    NEWLINE         reduce using rule 38 (f3 -> indirecto3 COMA X .)


state 65

    (39) f3 -> inmediato3 COMA X .

    COMMENT_IL      reduce using rule 39 (f3 -> inmediato3 COMA X .)
    NEWLINE         reduce using rule 39 (f3 -> inmediato3 COMA X .)


state 66

    (49) f2 -> CODOP REG COMA . REG
    (50) f2 -> CODOP REG COMA . NUM

    REG             shift and go to state 73
    NUM             shift and go to state 74


state 67

    (43) indirecto3 -> CODOP @ NUM .

    COMA            reduce using rule 43 (indirecto3 -> CODOP @ NUM .)
    COMMENT_IL      reduce using rule 43 (indirecto3 -> CODOP @ NUM .)
    NEWLINE         reduce using rule 43 (indirecto3 -> CODOP @ NUM .)


state 68

    (44) indirecto3 -> CODOP @ NAME .

    COMA            reduce using rule 44 (indirecto3 -> CODOP @ NAME .)
    COMMENT_IL      reduce using rule 44 (indirecto3 -> CODOP @ NAME .)
    NEWLINE         reduce using rule 44 (indirecto3 -> CODOP @ NAME .)


state 69

    (45) inmediato3 -> CODOP # NUM .

    COMA            reduce using rule 45 (inmediato3 -> CODOP # NUM .)
    COMMENT_IL      reduce using rule 45 (inmediato3 -> CODOP # NUM .)
    NEWLINE         reduce using rule 45 (inmediato3 -> CODOP # NUM .)


state 70

    (46) inmediato3 -> CODOP # NAME .

    COMA            reduce using rule 46 (inmediato3 -> CODOP # NAME .)
    COMMENT_IL      reduce using rule 46 (inmediato3 -> CODOP # NAME .)
    NEWLINE         reduce using rule 46 (inmediato3 -> CODOP # NAME .)


state 71

    (6) inicio -> etiqueta START numero COMMENT_IL . NEWLINE

    NEWLINE         shift and go to state 75


state 72

    (7) inicio -> etiqueta START numero NEWLINE .

    NAME            reduce using rule 7 (inicio -> etiqueta START numero NEWLINE .)
    PLUS            reduce using rule 7 (inicio -> etiqueta START numero NEWLINE .)
    SIO             reduce using rule 7 (inicio -> etiqueta START numero NEWLINE .)
    TIO             reduce using rule 7 (inicio -> etiqueta START numero NEWLINE .)
    CODOP           reduce using rule 7 (inicio -> etiqueta START numero NEWLINE .)


state 73

    (49) f2 -> CODOP REG COMA REG .

    COMMENT_IL      reduce using rule 49 (f2 -> CODOP REG COMA REG .)
    NEWLINE         reduce using rule 49 (f2 -> CODOP REG COMA REG .)


state 74

    (50) f2 -> CODOP REG COMA NUM .

    COMMENT_IL      reduce using rule 50 (f2 -> CODOP REG COMA NUM .)
    NEWLINE         reduce using rule 50 (f2 -> CODOP REG COMA NUM .)


state 75

    (6) inicio -> etiqueta START numero COMMENT_IL NEWLINE .

    NAME            reduce using rule 6 (inicio -> etiqueta START numero COMMENT_IL NEWLINE .)
    PLUS            reduce using rule 6 (inicio -> etiqueta START numero COMMENT_IL NEWLINE .)
    SIO             reduce using rule 6 (inicio -> etiqueta START numero COMMENT_IL NEWLINE .)
    TIO             reduce using rule 6 (inicio -> etiqueta START numero COMMENT_IL NEWLINE .)
    CODOP           reduce using rule 6 (inicio -> etiqueta START numero COMMENT_IL NEWLINE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for NAME in state 0 resolved as shift
WARNING: reduce/reduce conflict in state 8 resolved using rule (sicxe_file -> empty programa)
WARNING: rejected rule (empty -> <empty>) in state 8
WARNING: reduce/reduce conflict in state 46 resolved using rule (simple3 -> CODOP NUM)
WARNING: rejected rule (f2 -> CODOP NUM) in state 46
WARNING: Rule (f2 -> CODOP NUM) is never reduced
